<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X-Bionic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sina">新浪账户登录</string>
    <string name="tencent">腾讯账户登录</string>
    <string name="login">部落用户登录</string>
    <string name="register">新用户注册</string>
    <string name="title_activity_login_main">LoginMainActivity</string>
    <string name="xlogin_titleid">无限增值服务应用，欢迎您！</string>
    <string name="userpeopleid">用户名</string>
    <string name="userposswdid">密码</string>
    <string name="x_login">登录</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="search">搜索</string>
    <string name="logo">图标</string>
    <string name="list">列表</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_activity_product_main">ProductMainActivity</string>
    <string name="title_activity_introduction_home">IntroductionHomeActivity</string>
    <string name="x_introduction">X的介绍</string>
    <string name="x_product">产品购买</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="user_info_bu">部落积分：</string>
    <string name="user_info_vouchers">可兑换抵用劵：</string>
    <string name="user_info_upgrade">达人升级进度条</string>
    <string name="yuan">元</string>
    <string name="title_category_search">分类与搜索</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="product_info">商品信息</string>
    <string name="product_price">售价：</string>
    <string name="product_service">服务:由部落平方发货并提供售后服务。</string>
    <string name="product_color">颜色：</string>
    <string name="product_size">尺码：</string>
    <string name="product_count">数量：</string>
    <string name="product_qty">（库存0件）：</string>
    <string name="product_title_size">产品尺码</string>
    <string name="product_labs">科技点</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="shopcat">购物车</string>
    <string name="testcontent">测试体验用户累积消费换购丹麦国宝级拉杆箱</string>
    <string name="certificatecontent">选填，从手机联系人中查找达人手机号码或EMAIL获得8%抵用卷</string>
    <string name="postage">邮寄费：</string>
    <string name="wares_total">商品金额总计：</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="accounts">结算</string>
    <string name="balance_receiver_info">收货人信息：</string>
    <string name="balance_use_coupons">使用抵用券</string>
    <string name="balance_use_credits">使用提货券</string>
    <string name="balance_pay_method">选择支付方式:</string>
    <string name="balance_pay_zhifubao">选择支付宝付费</string>
    <string name="balance_logistics">选择配送方式:</string>
    <string name="balance_logistics_express">快递</string>
    <string name="balance_order_amount">订单金额：</string>
    <string name="balance_logistics_money">邮寄费用：</string>
    <string name="balance_credits_money">提货券使用：</string>
    <string name="balance_coupons_money">抵用券使用：</string>
    <string name="balance_need_money">待付金额：</string>
    <string name="title_activity_sina_login">SinaLoginActivity</string>
    <string name="sinacontent">使用SSO登入前，请检查手机上是否已经安装新浪微博客户端，目前仅3.0.0及以上微博客户端版本支持SSO。如果未安装，将自动转为Oauth2.0进行认证。</string>
    <string name="title_activity_tencent">TencentActivity</string>

</resources>