<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layout_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back" >

        <Button
            android:id="@+id/btn_return_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_selector" />

        <TextView
            android:id="@+id/tv_title_shop"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/shopcat" />

        <Button
            android:id="@+id/btn_pencil_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/pencil" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relyout_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_shop"
        android:background="#2e2e2e"
        android:paddingBottom="10.0dip" >

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/findbarbackground"
            android:ellipsize="end"
            android:hint="@string/certificatecontent"
            android:paddingLeft="18.0dip"
            android:paddingRight="58.0dip"
            android:singleLine="true"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/editText"
            android:layout_below="@id/editText"
            android:layout_marginLeft="20.0dip"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/testcontent"
            android:textColor="#ffe06208" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shopcat_foot1"
        android:gravity="center_vertical"
        android:paddingLeft="10.0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postage"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/postage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥10"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:text="@string/wares_total"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/wares_product_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥0.0"
            android:textColor="@color/demo" />

        <TextView
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/btn_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:background="@drawable/sendfor_btn2_selector"
            android:text="@string/accounts"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_shop_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lin_shop"
        android:layout_below="@id/relyout_shop"
        android:background="#3C3C3C" />

</RelativeLayout>