<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back" >

        <Button
            android:id="@+id/btn_back_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_selector" />

        <TextView
            android:id="@+id/tv_title_order"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/accounts" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sendfor_list"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <TextView
            android:id="@+id/tv_receiver_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/balance_receiver_info"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_receiver_info"
            android:layout_below="@id/tv_receiver_info"
            android:layout_marginTop="8.0dip"
            android:text="vincent"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_name"
            android:layout_alignBottom="@id/tv_name"
            android:layout_marginLeft="12dip"
            android:layout_toRightOf="@id/tv_name"
            android:text="13656056888"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_receiver_info"
            android:layout_below="@id/tv_name"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8.0dip"
            android:singleLine="true"
            android:text="福建省厦门市软件园二期望海路25号楼701"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sendfor_list"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="10.0dip" >

        <TextView
            android:id="@+id/tv_use_coupons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/balance_use_coupons"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sendfor_list"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="10.0dip" >

        <TextView
            android:id="@+id/tv_use_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/balance_use_credits"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sendfor_list1"
        android:orientation="vertical"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="10.0dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/balance_pay_method"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btn_zhifubao"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:background="@drawable/selectrdio" />

            <TextView
                android:id="@+id/tv_use_zhifubao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:text="@string/balance_pay_zhifubao"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:src="@drawable/zhifubao" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sendfor_list1"
        android:orientation="horizontal"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:paddingTop="10.0dip" >

        <TextView
            android:id="@+id/tv_logistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/balance_logistics"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_kuaidi"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:background="@drawable/selectrdio" />

        <TextView
            android:id="@+id/tv_logistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:text="@string/balance_logistics_express"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5.0dip" >

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="8.0dip"
            android:text="@string/balance_order_amount"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_order_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_order"
            android:layout_toRightOf="@id/tv_order"
            android:text="1589.0"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_order"
            android:layout_toRightOf="@id/tv_order_value"
            android:text="元"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_postage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_order"
            android:layout_below="@id/tv_order"
            android:layout_marginTop="8dp"
            android:text="@string/balance_logistics_money"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_postage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_postage"
            android:layout_toRightOf="@id/tv_postage"
            android:text="0.0"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_postage"
            android:layout_toRightOf="@id/tv_postage_value"
            android:text="元"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_need"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_order"
            android:layout_below="@id/tv_postage"
            android:layout_marginTop="8dp"
            android:text="@string/balance_need_money"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_need_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_need"
            android:layout_toRightOf="@id/tv_need"
            android:text="1589.0"
            android:textColor="@color/hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_need"
            android:layout_toRightOf="@id/tv_need_value"
            android:text="元"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/commitorderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_order"
            android:layout_below="@id/tv_need"
            android:layout_marginTop="12dp"
            android:background="@drawable/commitorder" />

        <TextView
            android:id="@+id/tv_credits_yuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_order"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:text="元"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_credits_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_order"
            android:layout_toLeftOf="@id/tv_credits_yuan"
            android:text="0.0"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_order"
            android:layout_toLeftOf="@id/tv_credits_value"
            android:text="@string/balance_credits_money"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_coupons_yuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_postage"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:text="元"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_coupons_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_postage"
            android:layout_toLeftOf="@id/tv_coupons_yuan"
            android:text="0.0"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_postage"
            android:layout_toLeftOf="@id/tv_coupons_value"
            android:text="@string/balance_coupons_money"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/continuebuyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/tv_credits_yuan"
            android:layout_below="@id/tv_need"
            android:layout_marginTop="12dp"
            android:background="@drawable/continuebuy" />
    </RelativeLayout>

</LinearLayout>