<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peoplebackground"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back" >

        <Button
            android:id="@+id/btn_back_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_selector" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/x_login" />
    </RelativeLayout>

    <TextView
        android:id="@+id/xlogin_titleid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40.0dip"
        android:paddingLeft="40.0dip"
        android:text="@string/xlogin_titleid"
        android:textColor="#FFFFFF"
        android:textSize="20.0sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40.0dip" >

        <EditText
            android:id="@+id/userpeopleid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/enterbound"
            android:hint="@string/userpeopleid"
            android:maxLength="20"
            android:paddingLeft="80.0dip"
            android:singleLine="true"
            android:textColor="#ffffffff" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/userpeopleid"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24.0dip"
            android:src="@drawable/personpicture" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip" >

        <EditText
            android:id="@+id/userposswdid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:background="@drawable/enterbound"
            android:hint="@string/userposswdid"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingLeft="80.0dip"
            android:textColor="#ffffffff" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userposswdid"
            android:layout_centerVertical="true"
            android:layout_marginLeft="31.0dip"
            android:src="@drawable/keypicture" />
    </RelativeLayout>

    <Button
        android:id="@+id/getinid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@drawable/registor_login"
        android:textColor="#FFFFFF"
        android:textSize="20.0sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/forgetposswdid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="20.0dip"
            android:background="@drawable/forgetposswd_login" />
    </RelativeLayout>

</LinearLayout>